#2837: Updated custom theme to avoid covered buttons

--- a/web/themes/custom/os2forms_selvbetjening_theme/assets/app.scss
+++ b/web/themes/custom/os2forms_selvbetjening_theme/assets/app.scss
@@ -1,5 +1,6 @@
 .content-header {
   background-color: transparent;
+  padding-bottom: var(--space-s);
 }
 
 .logo img {
